--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
 
     // Add the instructions trials to the timeline
     timeline.push(instructionsTrial)
-    var preload = {
-        type: jsPsychPreload,
-        auto_preload: true
-    }
+  
     
     var sounds = [
       'trunc-1_1/Bn-ord-A#2-ff-N-N_trunc.mp3',
@@ -59,7 +56,12 @@
         prompt: "<p>same pitch?</p>"
       }
 
-    timeline.push(stimulusTrial)
+    var preload_block_1 = {
+        type: jsPsychPreload,
+        trials: [stimulusTrial]
+    }
+
+    timeline.push(preload_block_1)
 
     jsPsych.run(timeline);
     
